@@ -18,24 +18,22 @@ import java.util.Objects;
 
 import vukan.com.apursp.callbacks.CategoriesCallback;
 import vukan.com.apursp.callbacks.CategoryCallback;
+import vukan.com.apursp.callbacks.CommentsCallback;
 import vukan.com.apursp.callbacks.FavoriteCallback;
 import vukan.com.apursp.callbacks.FavoritesCallback;
-import vukan.com.apursp.callbacks.CommentsCallback;
 import vukan.com.apursp.callbacks.MessageCallback;
 import vukan.com.apursp.callbacks.ProductCallback;
 import vukan.com.apursp.callbacks.ProductImagesCallback;
 import vukan.com.apursp.callbacks.ProductsCallback;
 import vukan.com.apursp.callbacks.RatingCallback;
 import vukan.com.apursp.callbacks.UserCallback;
-import vukan.com.apursp.models.FavoriteProduct;
 import vukan.com.apursp.models.Comment;
+import vukan.com.apursp.models.FavoriteProduct;
 import vukan.com.apursp.models.Message;
 import vukan.com.apursp.models.Product;
 import vukan.com.apursp.models.ProductCategory;
 import vukan.com.apursp.models.ProductImage;
 import vukan.com.apursp.models.User;
-
-import static java.lang.Float.parseFloat;
 
 public class Database {
     private FirebaseFirestore firestore;
@@ -45,7 +43,7 @@ public class Database {
     private List<ProductImage> productImages;
     private List<Product> userProducts;
     private List<Message> userMessages;
-    private List<Comment>userComments;
+    private List<Comment> userComments;
 
     public Database() {
         firestore = FirebaseFirestore.getInstance();
@@ -381,7 +379,7 @@ public class Database {
         });
     }
 
-    public void addUserComment(Comment newComment){
+    public void addUserComment(Comment newComment) {
         Map<String, Object> comments = new HashMap<>();
         DocumentReference newCommentRef = firestore.collection("comments").document();
 
@@ -393,19 +391,19 @@ public class Database {
         newCommentRef.set(comments);
     }
 
-    public void getUserComments(String userID, CommentsCallback callback){
+    public void getUserComments(String userID, CommentsCallback callback) {
 
-        userComments=new ArrayList<>();
+        userComments = new ArrayList<>();
 
-        firestore.collection("comments").whereEqualTo("toUserID",userID).get().addOnCompleteListener(task->{
-            if(task.isSuccessful()){
-                for(QueryDocumentSnapshot document : Objects.requireNonNull(task.getResult())) {
+        firestore.collection("comments").whereEqualTo("toUserID", userID).get().addOnCompleteListener(task -> {
+            if (task.isSuccessful()) {
+                for (QueryDocumentSnapshot document : Objects.requireNonNull(task.getResult())) {
 
-                    Comment comment=new Comment();
+                    Comment comment = new Comment();
                     comment.setToUserID(userID);
                     comment.setFromUserID(document.getString("fromUserID"));
                     comment.setComment(document.getString("comment"));
-                    comment.setGrade(new Float(document.getDouble("grade")));
+                    comment.setGrade(Float.valueOf(String.valueOf(document.getDouble("grade"))));
                     userComments.add(comment);
                 }
                 callback.onCallback(userComments);
@@ -413,22 +411,22 @@ public class Database {
         });
     }
 
-    public void getUserRating(String userID, RatingCallback callback){
-        ArrayList<Double>sums=new ArrayList<>();
-        firestore.collection("comments").whereEqualTo("toUserID",userID).get().addOnCompleteListener(task->{
-            if(task.isSuccessful()){
-                for(QueryDocumentSnapshot document : Objects.requireNonNull(task.getResult())) {
-                    Double value=document.getDouble("grade");
+    public void getUserRating(String userID, RatingCallback callback) {
+        ArrayList<Double> sums = new ArrayList<>();
+        firestore.collection("comments").whereEqualTo("toUserID", userID).get().addOnCompleteListener(task -> {
+            if (task.isSuccessful()) {
+                for (QueryDocumentSnapshot document : Objects.requireNonNull(task.getResult())) {
+                    Double value = document.getDouble("grade");
                     sums.add(value);
                 }
             }
-            int count=0;
-            Double sum=0.0;
-            while(sums.size()>count){
-                sum=sum+sums.get(count);
+            int count = 0;
+            double sum = 0.0;
+            while (sums.size() > count) {
+                sum = sum + sums.get(count);
                 count++;
             }
-            float grade=sum.floatValue()/count;
+            float grade = (float) sum / count;
             callback.onCallback(grade);
         });
     }
